--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.0",
     "bootstrap": "^4.5.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.6",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-contenteditable": "^3.3.4",
