--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/uuid": "^8.0.0",
     "animate-css-grid": "^1.4.3",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.2.0",
