--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.0",
     "@types/uuid": "^8.0.0",
     "animate-css-grid": "^1.4.3",
+    "immutability-helper": "^3.1.1",
     "react": "^16.13.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
