--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.0",
     "@types/uuid": "^8.0.0",
     "animate-css-grid": "^1.4.3",
@@ -18,8 +19,10 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.2.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuid": "^8.1.0"
