--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.2.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuid": "^8.1.0"
