--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.2",
-    "@types/uuid": "^8.0.0",
+    "@types/uuid": "^8.3.0",
     "animate-css-grid": "^1.4.3",
     "immutability-helper": "^3.1.1",
     "react": "^16.13.1",
@@ -20,10 +20,9 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.3",
     "react-textarea-autosize": "^8.2.0",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuid": "^8.3.0"
@@ -32,8 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "redux-devtools-extension": "^2.13.8"
   }
 }
