--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/uuid": "^8.3.0",
     "animate-css-grid": "^1.4.3",
     "immutability-helper": "^3.1.1",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
@@ -31,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "eslintConfig": {
     "extends": "react-app"
