--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "lint": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "publish:npm": "rm -rf dist && mkdir dist && babel --extensions .ts,.tsx,.js --presets=@babel/preset-typescript,@babel/preset-react,@babel/preset-env src/ -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,6 +52,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "redux-devtools-extension": "^2.13.8"
   }
 }
