--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/styled-components": "^5.1.2",
     "@types/uuid": "^8.3.0",
     "animate-css-grid": "^1.4.3",
-    "immutability-helper": "^3.1.1",
+    "immer": "^7.0.9",
     "prettier": "^2.0.5",
     "randomcolor": "^0.6.2",
     "react": "^16.13.1",
