--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-textarea-autosize": "^8.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuid": "^8.3.0"
