--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/memdown": "^3.0.0",
     "@types/node": "^12.0.0",
     "@types/randomcolor": "^0.5.5",
     "@types/react": "^16.9.0",
@@ -16,6 +17,7 @@
     "@types/uuid": "^8.3.0",
     "animate-css-grid": "^1.4.3",
     "immer": "^7.0.9",
+    "memdown": "^5.1.0",
     "prettier": "^2.0.5",
     "randomcolor": "^0.6.2",
     "react": "^16.13.1",
@@ -30,6 +32,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
+    "ushin-db": "USHIN-Inc/ushin-db#new-data-model",
     "uuid": "^8.3.0"
   },
   "scripts": {
