replace ushin-db master branch with fix-main-point-bug branch

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
-    "ushin-db": "USHIN-Inc/ushin-db#master",
+    "ushin-db": "USHIN-Inc/ushin-db#fix-main-point-bug",
     "uuid": "^8.3.0"
   },
   "scripts": {
