replace memdown with level-js

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/memdown": "^3.0.0",
+    "@types/level-js": "^4.0.1",
     "@types/node": "^12.0.0",
     "@types/randomcolor": "^0.5.5",
     "@types/react": "^16.9.0",
@@ -17,7 +17,7 @@
     "@types/uuid": "^8.3.0",
     "animate-css-grid": "^1.4.3",
     "immer": "^7.0.9",
-    "memdown": "^5.1.0",
+    "level-js": "^5.0.2",
     "prettier": "^2.0.5",
     "randomcolor": "^0.6.2",
     "react": "^16.13.1",
