--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "react-textarea-autosize": "^8.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
