--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/history": "^4.7.8",
     "@types/jest": "^24.0.0",
     "@types/level-js": "^4.0.1",
     "@types/node": "^12.0.0",
@@ -13,6 +14,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.2",
     "@types/uuid": "^8.3.0",
     "animate-css-grid": "^1.4.3",
@@ -25,6 +27,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-textarea-autosize": "^8.2.0",
     "redux": "^4.0.5",
