--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/styled-components": "^5.1.2",
     "@types/uuid": "^8.3.0",
     "animate-css-grid": "^1.4.3",
-    "immer": "^7.0.9",
+    "immer": ">=8.0.1",
     "level-js": "^5.0.2",
     "prettier": "^2.0.5",
     "randomcolor": "^0.6.2",
